--- a/index-START.html
+++ b/index-START.html
@@ -61,6 +61,10 @@
   //Select audio element with an keydown event listener
   window.addEventListener('keydown', function(e){
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    if (!audio) return; // stop function from running all together
+
+    audio.currentTime = 0; // rewind to the start
+    audio.play();
     console.log(audio);
   });
 </script>
